--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,6 +5,24 @@ hr.pic_divider {
 }
 
 .paragraph_font {
-    font-size: 1.25rem;
+    font-size: 1rem;
     font-weight: 200;
+}
+
+p.edu_title {
+    font-weight: bold;
+    font-size: 1.5rem;
+}
+
+p.edu_subtitle{
+    font-style: italic;
+}
+
+p.degree{
+    font-style: italic;
+    font-weight: bold;
+}
+
+p.gpa{
+    font-weight: bold;
 }
