--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,7 +6,7 @@ hr.pic_divider {
 
 .paragraph_font {
     font-size: 1rem;
-    font-weight: 200;
+    font-weight: 300;
 }
 
 p.edu_title {
@@ -25,4 +25,28 @@ p.degree{
 
 p.gpa{
     font-weight: bold;
+}
+
+p.exp_title{
+    font-weight: bold;
+    font-size: 1.75rem;
+}
+
+p.exp_subtitle{
+    font-style: italic;
+    font-size: 1.25rem;
+}
+
+p.exp_text{
+    font-size: 1.25rem;;
+}
+
+p.org_title{
+    font-size: 1.5rem;
+    font-weight: 400;
+}
+
+p.org_subtitle{
+    font-style: italic;
+    font-size: 1rem;
 }
